wg-easy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-tcp
spec:
  type: ClusterIP
  ports:
    - port: 51821
      targetPort: wg-easy-tcp
      protocol: TCP
  selector:
    app: wg-easy
    part-of: wg-easy
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.61
  selector:
    app: wg-easy
    part-of: wg-easy
  ports:
    - port: 51820
      targetPort: wg-easy
      protocol: UDP
  allocateLoadBalancerNodePorts: false
